--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
         <div class="frame-thumbs">
           <img src="frames/helped.png" class="frame-thumb selected" data-frame="frames/helped.png" title="I Helped">
           <img src="frames/donated.png" class="frame-thumb" data-frame="frames/donated.png" title="I Donated">
+          <img src="frames/rebuilding-sri-lanka.png" class="frame-thumb" data-frame="frames/rebuilding-sri-lanka.png" title="Let’s Rebuild Sri Lanka">
         </div>
       </div>
 
