new frame according to new version

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
     <div class="right">
       <div class="frame-selection">
         <h4>Select Frame:</h4>
+        <!-- This container holds the thumbnails for the different frames -->
         <div class="frame-thumbs">
           <img src="frames/rebuilding-sri-lanka-1.png" class="frame-thumb" data-frame="frames/rebuilding-sri-lanka-1.png" title="Let’s Rebuild Sri Lanka">
           <img src="frames/rebuilding-sri-lanka-2.png" class="frame-thumb" data-frame="frames/rebuilding-sri-lanka-2.png" title="Let’s Rebuild Sri Lanka">
@@ -268,8 +269,8 @@
     let dragStartOffsetY = 0;
 
     // Load initial frame
-    loadFrame("frames/helped.png");
-d
+    loadFrame("frames/rebuilding-srilanka-1.png");
+
     function loadFrame(src) {
       frameLoaded = false;
       frameImg = new Image();
