updated with all new frames

--- a/index.html
+++ b/index.html
@@ -188,7 +188,11 @@
           <!-- Each 'img' tag represents a selectable frame thumbnail -->
           <!-- The 'selected' class on this image makes it the default frame -->
           <img src="frames/rebuilding-srilanka-1.png" class="frame-thumb selected" data-frame="frames/rebuilding-srilanka-1.png" title="Let's Rebuild Sri Lanka">
+          <img src="frames/helped-1.png" class="frame-thumb" data-frame="frames/rebuilding-srilanka-2.png" title="I Helped">
+          <img src="frames/donated-1.png" class="frame-thumb selected" data-frame="frames/rebuilding-srilanka-1.png" title="I Donated">
           <img src="frames/rebuilding-srilanka-2.png" class="frame-thumb" data-frame="frames/rebuilding-srilanka-2.png" title="Let's Rebuild Sri Lanka">
+          <img src="frames/helped-1.png" class="frame-thumb selected" data-frame="frames/rebuilding-srilanka-1.png" title="I Helped">
+          <img src="frames/donated-2.png" class="frame-thumb" data-frame="frames/rebuilding-srilanka-2.png" title="I Donated">
         </div>
       </div>
 
